Добавил новые методы, написан тест для их проверки